fix: font size on tablet

--- a/JobFairApplication/src/app/pages/job-list/job-list.page.scss
+++ b/JobFairApplication/src/app/pages/job-list/job-list.page.scss
@@ -175,7 +175,7 @@
     padding: 10px;
 
     .list-icon {
-      font-size: 30px;
+      font-size: 35px;
       padding: 10px;
     }
   }
